initial mark and routine added
